tests/toylang/neg/000263_mutation.toylang
program a = { do a = a; } .
